[tool.poetry]
name = "repl_nix_EachAthleticIntegers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
orjson = "^3.8.12"
PyNaCl = "^1.5.0"
requests = "^2.30.0"
typing-extensions = "^4.5.0"
yarl = "^1.9.2"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
